# kanban

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: cargo.yaml  test.yml
kanban/: Cargo.toml
kanban-mpi/: Cargo.toml
kanban-mpi/src/: main.rs
kanban/src/: arg.rs  gpu.rs  lib.rs  long.rs  main.rs  multiple.rs  multiple2.rs  raw_gpu.rs  single.rs  vertical.rs  wave.rs
kanban/src/method/: compile.rs  copy.rs  mod.rs  procname.rs
kanban/src/template/: kanban.idfile
kanban/src/template/gpu/: Cargo.toml  main.rs  shader.wgsl
