[workspace]
resolver = "2"
members = [
    "kanban",
    "kanban-mpi",
]

default-members = [
    "kanban",
]

[workspace.package]
version = "2.3.0"
edition = "2021"
authors = ["th"]
license = "MIT"
repository = "https://github.com/th2ch-g/kanban"
description = "kanban: A joke tool that displays your message on top(1)/nvtop/nvitop using parallel process"

[workspace.dependencies]
kanban = { path = "kanban/" }
kanban-mpi = { path = "kanban-mpi/" }
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"]  }
chrono = "0.4.22"
rand = "0.8.5"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", tag = "v0.18.0" }
pollster = "0.3.0"
env_logger = "0.10.1"
log = "0.4.21"
mpi = "0.6.0"
itertools = "0.14.0"

[profile.release]
opt-level = "s"
lto = "fat"
strip = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
