[package]
name = "kanban"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
rand.workspace = true
pollster.workspace = true
env_logger.workspace = true
log.workspace = true
itertools.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "27.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27.0", features = ["webgl"] }

[[bin]]
name = "kanban"
path = "src/main.rs"
